src/Templates.Language/js/src/mode/tts/TtlParser.js
"use strict";
// Generated from TtlLexer.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from "./antlr4/index.web";
import TtlParserListener from './TtlParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class TtlParser extends antlr4.Parser {

    static grammarFileName = "TtlParser.g4";
    static literalNames = [  ];
    static symbolicNames = [ null, "TEXT", "TEXT_WS", "IMPORT_TOKEN", "ID",
        "ROOT_REF", "MEMBER_P", "OUT", "SUB_START",
        "SUB_CLOSE", "CSHARP_END", "CSHARP_TOKEN",
        "CSHARP_START", "DEF_STARTNAME", "DEF_ENDNAME",
        "DELIM", "DEF_START", "DEF_CLOSE", "RAW", "OUT_PARAMSTART",
        "OUT_PARAMEND", "DEF_OUT", "COMMENT", "SKIP_WS",
        "SUB_COMMENT", "SUB_SKIP_WS", "DEF_COMMENT",
        "DEF_TYPE", "IMPORT_COMMENT", "CALL_RETURN_COMMENT",
        "CALL_SKIP_WS", "OUT_COMMENT", "OUT_SKIP_WS",
        "CALL_COMMENT", "CALL_WS" ];
    static ruleNames = [ "ttl", "raw", "definition", "def", "inherited_def",
        "simple_def", "default_chain", "import_block",
        "outblock", "chain", "call", "named_call", "unnamed_call",
        "csharp_expression", "subtemplate", "text" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TtlParser.ruleNames;
        this.literalNames = TtlParser.literalNames;
        this.symbolicNames = TtlParser.symbolicNames;
    }



    ttl() {
        let localctx = new TtlContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, TtlParser.RULE_ttl);
        var _la = 0;
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 39;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294835454) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 7) !== 0)) {
                this.state = 37;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
                switch(la_) {
                    case 1:
                        this.state = 32;
                        this.definition();
                        break;

                    case 2:
                        this.state = 33;
                        this.import_block();
                        break;

                    case 3:
                        this.state = 34;
                        this.outblock();
                        break;

                    case 4:
                        this.state = 35;
                        this.raw();
                        break;

                    case 5:
                        this.state = 36;
                        this.text();
                        break;

                }
                this.state = 41;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    raw() {
        let localctx = new RawContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, TtlParser.RULE_raw);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 42;
            this.match(TtlParser.RAW);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    definition() {
        let localctx = new DefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, TtlParser.RULE_definition);
        var _la = 0;
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 44;
            this.match(TtlParser.DEF_START);
            this.state = 46;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 45;
                this.def();
                this.state = 48;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===2 || _la===13);
            this.state = 50;
            this.match(TtlParser.DEF_CLOSE);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    def() {
        let localctx = new DefContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, TtlParser.RULE_def);
        try {
            this.state = 54;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
            switch(la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 52;
                    this.simple_def();
                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 53;
                    this.inherited_def();
                    break;

            }
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    inherited_def() {
        let localctx = new Inherited_defContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, TtlParser.RULE_inherited_def);
        var _la = 0;
        try {
            this.state = 184;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
            switch(la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 59;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 56;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 61;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 62;
                    this.match(TtlParser.DEF_STARTNAME);
                    this.state = 66;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 63;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 68;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 69;
                    this.match(TtlParser.ID);
                    this.state = 73;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 70;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 75;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 76;
                    this.match(TtlParser.DELIM);
                    this.state = 80;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 77;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 82;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 83;
                    this.match(TtlParser.ID);
                    this.state = 87;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 84;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 89;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 90;
                    this.match(TtlParser.DEF_ENDNAME);
                    this.state = 94;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 91;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 96;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
                    }

                    this.state = 98;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===21) {
                        this.state = 97;
                        this.default_chain();
                    }

                    this.state = 103;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 100;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 105;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 106;
                    this.subtemplate();
                    this.state = 110;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 107;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 112;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 113;
                    this.match(TtlParser.DEF_TYPE);
                    this.state = 117;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 114;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 119;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 120;
                    this.match(TtlParser.ID);
                    this.state = 124;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 121;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 126;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
                    }

                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 130;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 127;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 132;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 133;
                    this.match(TtlParser.DEF_STARTNAME);
                    this.state = 137;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 134;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 139;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 140;
                    this.match(TtlParser.ID);
                    this.state = 144;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 141;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 146;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 147;
                    this.match(TtlParser.DELIM);
                    this.state = 151;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 148;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 153;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 154;
                    this.match(TtlParser.ID);
                    this.state = 158;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 155;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 160;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 161;
                    this.match(TtlParser.DEF_ENDNAME);
                    this.state = 165;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,20,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 162;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 167;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,20,this._ctx);
                    }

                    this.state = 169;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===21) {
                        this.state = 168;
                        this.default_chain();
                    }

                    this.state = 174;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 171;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 176;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 177;
                    this.subtemplate();
                    this.state = 181;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,23,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 178;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 183;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,23,this._ctx);
                    }

                    break;

            }
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    simple_def() {
        let localctx = new Simple_defContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, TtlParser.RULE_simple_def);
        var _la = 0;
        try {
            this.state = 286;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,41,this._ctx);
            switch(la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 189;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 186;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 191;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 192;
                    this.match(TtlParser.DEF_STARTNAME);
                    this.state = 196;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 193;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 198;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 199;
                    this.match(TtlParser.ID);
                    this.state = 203;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 200;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 205;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 206;
                    this.match(TtlParser.DEF_ENDNAME);
                    this.state = 210;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,28,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 207;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 212;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,28,this._ctx);
                    }

                    this.state = 214;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===21) {
                        this.state = 213;
                        this.default_chain();
                    }

                    this.state = 219;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 216;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 221;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 222;
                    this.subtemplate();
                    this.state = 226;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 223;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 228;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 229;
                    this.match(TtlParser.DEF_TYPE);
                    this.state = 233;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 230;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 235;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 236;
                    this.match(TtlParser.ID);
                    this.state = 240;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,33,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 237;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 242;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,33,this._ctx);
                    }

                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 246;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 243;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 248;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 249;
                    this.match(TtlParser.DEF_STARTNAME);
                    this.state = 253;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 250;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 255;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 256;
                    this.match(TtlParser.ID);
                    this.state = 260;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 257;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 262;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 263;
                    this.match(TtlParser.DEF_ENDNAME);
                    this.state = 267;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,37,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 264;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 269;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,37,this._ctx);
                    }

                    this.state = 271;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===21) {
                        this.state = 270;
                        this.default_chain();
                    }

                    this.state = 276;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 273;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 278;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 279;
                    this.subtemplate();
                    this.state = 283;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,40,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 280;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 285;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,40,this._ctx);
                    }

                    break;

            }
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    default_chain() {
        let localctx = new Default_chainContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, TtlParser.RULE_default_chain);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 288;
            this.match(TtlParser.DEF_OUT);
            this.state = 292;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,42,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 289;
                    this.match(TtlParser.TEXT_WS);
                }
                this.state = 294;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,42,this._ctx);
            }

            this.state = 295;
            this.chain();
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    import_block() {
        let localctx = new Import_blockContext(this, this._ctx, this.state);
        this.enterRule(localctx, 14, TtlParser.RULE_import_block);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 297;
            this.match(TtlParser.IMPORT_TOKEN);
            this.state = 298;
            this.match(TtlParser.SUB_START);
            this.state = 299;
            this.match(TtlParser.TEXT);
            this.state = 300;
            this.match(TtlParser.SUB_CLOSE);
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    outblock() {
        let localctx = new OutblockContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, TtlParser.RULE_outblock);
        var _la = 0;
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 302;
            this.match(TtlParser.OUT);
            this.state = 306;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,43,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 303;
                    this.match(TtlParser.TEXT_WS);
                }
                this.state = 308;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,43,this._ctx);
            }

            this.state = 309;
            this.chain();
            this.state = 311;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===8) {
                this.state = 310;
                this.subtemplate();
            }

        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    chain() {
        let localctx = new ChainContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, TtlParser.RULE_chain);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 316;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,45,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 313;
                    this.match(TtlParser.TEXT_WS);
                }
                this.state = 318;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,45,this._ctx);
            }

            this.state = 319;
            this.call();
            this.state = 323;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,46,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 320;
                    this.match(TtlParser.TEXT_WS);
                }
                this.state = 325;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,46,this._ctx);
            }

            this.state = 342;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,49,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 326;
                    this.match(TtlParser.DELIM);
                    this.state = 330;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,47,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 327;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 332;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,47,this._ctx);
                    }

                    this.state = 333;
                    this.call();
                    this.state = 337;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,48,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 334;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 339;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,48,this._ctx);
                    }

                }
                this.state = 344;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,49,this._ctx);
            }

        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    call() {
        let localctx = new CallContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, TtlParser.RULE_call);
        try {
            this.state = 347;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,50,this._ctx);
            switch(la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 345;
                    this.named_call();
                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 346;
                    this.unnamed_call();
                    break;

            }
        } catch (re) {
            if(re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }



    named_call() {
        let localctx = new Named_callContext(this, this._ctx, this.state);
        this.enterRule(localctx, 22, TtlParser.RULE_named_call);
        var _la = 0;
        try {
            this.state = 530;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,80,this._ctx);
            switch(la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 352;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 349;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 354;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 355;
                    this.match(TtlParser.ID);
                    this.state = 359;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 356;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 361;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 362;
                    this.match(TtlParser.OUT_PARAMSTART);
                    this.state = 366;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,53,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 363;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 368;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,53,this._ctx);
                    }

                    this.state = 370;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===5) {
                        this.state = 369;
                        this.match(TtlParser.ROOT_REF);
                    }

                    this.state = 375;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,55,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 372;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 377;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,55,this._ctx);
                    }

                    this.state = 379;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===4) {
                        this.state = 378;
                        this.match(TtlParser.ID);
                    }

                    this.state = 384;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 381;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 386;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 387;
                    this.match(TtlParser.OUT_PARAMEND);
                    this.state = 391;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,58,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 388;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 393;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,58,this._ctx);
                    }

                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 397;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 394;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 399;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 400;
                    this.match(TtlParser.ID);
                    this.state = 404;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while(_la===2) {
                        this.state = 401;
                        this.match(TtlParser.TEXT_WS);
                        this.state = 406;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.state = 407;
                    this.match(TtlParser.OUT_PARAMSTART);
                    this.state = 411;
                    this._errHandler.sync(this);
                    var _alt = this._interp.adaptivePredict(this._input,61,this._ctx)
                    while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                        if(_alt===1) {
                            this.state = 408;
                            this.match(TtlParser.TEXT_WS);
                        }
                        this.state = 413;
                        this._errHandler.sync(this);
                        _alt = this._interp.adaptivePredict(this._input,61,this._ctx);
                    }
